# 6502

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  CPackConfig.cmake  CPackSourceConfig.cmake  build.ninja  clean.sh
src/: asmb.cpp  asmb.hpp  cpu.cpp  cpu.hpp  main.cpp  memory.cpp  memory.hpp  pc.cpp  pc.hpp
